--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 ext {
@@ -25,6 +26,10 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'mysql:mysql-connector-java:8.0.23'
+    implementation 'javax.websocket:javax.websocket-api:1.1'
+
+
+
 
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
