--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'mysql:mysql-connector-java:8.0.23'
     implementation 'javax.websocket:javax.websocket-api:1.1'
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
 
 
 
