--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.23'
     implementation 'javax.websocket:javax.websocket-api:1.1'
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+    implementation 'commons-fileupload:commons-fileupload:1.4'
+    implementation 'commons-io:commons-io:2.11.0'
 
 
 
